# presentaion-demo

./: README.md
01-interactive-analysis/: .env.example  .gitignore  demo-scenario.ipynb  fetch_fred_data.py  main.py  pyproject.toml
01-interactive-analysis/data/fred/: consumer_credit_risk_data.csv  metadata.json
01-interactive-analysis/output/: analysis_plan.md  analysis_step_1.py  fetch_fred_data.py  phase1_results.md
01-interactive-analysis/setup/: create-uv-env.sh  pyproject.toml
01-interactive-analysis/strategies/: strategies.md
02-agent-orchestration/: CONTRIBUTING.md  README.md  fred.ipynb
02-agent-orchestration/docs/features/: skill-system.md
02-agent-orchestration/self-hosted/: main.py
02-agent-orchestration/self-hosted/data/fred/: consumer_credit_risk_data.csv  consumer_credit_risk_metadata.json
02-agent-orchestration/self-hosted/setup/: create-uv-env.sh  install_korean_font.sh  test_korean_font.py
02-agent-orchestration/self-hosted/skills/data-structure-checker/scripts/: checker.py  reader.py
02-agent-orchestration/self-hosted/src/graph/: builder.py
02-agent-orchestration/self-hosted/src/tools/: coder_agent_tool.py
02-agent-orchestration/self-hosted/src/utils/: strands_sdk_utils.py
